[package]
name = "msegen"
version = "2.0.0-beta.8"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "msegen"
path = "src/bin/cli.rs"
doc = false

[[bin]]
name = "msg-gui"
path = "src/bin/gui.rs"
doc = false

[[bin]]
name = "msg-release"
path = "src/bin/release.rs"
doc = false

[build-dependencies]
git2 = "0.13"

[dependencies]
async-std = "1"
async-trait = "0.1"
css-color-parser = "0.1"
dir-lock = "0.3"
directories = "3"
iced = "0.3"
itertools = "0.10"
lazy_static = "1"
parking_lot = "0.11"
regex = "1"
semver = "1"
serde = "1"
serde_json = "1"
shlex = "1"
smart-default = "0.6"
tempfile = "3"
zip = "0.5"

[target.'cfg(unix)'.dependencies]
xdg-basedir = "1"

[target.'cfg(not(windows))'.dependencies]
termion = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.gitdir]
git = "https://github.com/fenhl/rust-gitdir"
branch = "main"

[dependencies.gres]
git = "https://github.com/fenhl/gres" #TODO publish on crates.io
branch = "main"

[dependencies.lore-seeker]
git = "https://github.com/cs-ech/lore-seeker-discord"
branch = "main"
default-features = false

[dependencies.mtg]
git = "https://github.com/fenhl/rust-mtg"
branch = "main"
features = ["custom"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json", "rustls-tls", "stream", "trust-dns"]

[dependencies.url]
version = "2"
features = ["serde"]
